app/assets/stylesheets/bootstrap/_breakingpoint.scss
.site-alert {
	margin-top: 20px;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 1000;
}

.site-header {
	margin-bottom: 75px;

	.header-top {
		background: url($cdnPath + "images/hsHeader.jpg") center top no-repeat;
		height: 444px;
		
		.container {
			position: relative;
		}

		.site-logo {
			background-image: url($cdnPath + "images/HSBP2.png");
			background-image: url($cdnPath + "images/HSBP2.svg");
			background-repeat: no-repeat;
			background-position: center center;
			height: 444px;
			margin: 0px auto;
			position: relative;
			width: 392px;

			a {
				position: absolute;
				top: 0;
				left: 0;
				height: 100%;
				width: 100%;
			}

			h1 {
				display: none;
				visibility: hidden;
			}
		}

		.site-header-btn {
			position: absolute;
			right: 30px;
			bottom: 55px;
			width: 200px;
		}

	}

	.header-bottom {
		background: url($cdnPath + "images/header-bottom.jpg") center top no-repeat;
		color: $white;
		height: 44px;
		width: 100%; //specifying width here so later we can do postion: fixed;

		&.fix {
			position: fixed;
			top: 0;
		}

		.site-header-nav {
			position: relative;

			.site-nav {
				list-style: none;
				margin: 0;
				padding: 0;
				height: 44px;
				width: 940px;
				overflow: hidden;

				li {
					border-left: none;
					border-right: 1px dashed #666;
					display: block;
					font-size: 16px;
					float: left;
					line-height: 1;

					a {
						background-color: $black;
						color: $white;
						display: block;
						text-align: center;
						padding: 14px 0px;
						width: 142px;

						&:hover {
							text-decoration: none;
						}
					}

					&:first-child, &.events {
						border-left: 1px dashed #666;

						a {
							width: 141px;
						}
					}

					&:hover, &.active {
						a {
							background-color: $linkColor;
						}
					}

					&.events {
						margin-left: 82px;
					}
				}
			}

			.site-nav-logo {
				background-color: $white;
				@include border-radius(37px);
				height: 74px;
				margin-left: -37px;
				position: absolute;
				top: 10px;
				left: 50%;
				width: 74px;

				.mini-logo {
					background-image: url($cdnPath + "images/HS-logo-black.png");
					background-image: url($cdnPath + "images/HS-logo-black.svg");
					background-repeat: no-repeat;
					background-position: center center;
					position: absolute;
					top: 50%;
					left: 50%;
					margin-left: -30px;
					margin-top: -30px;
					height: 60px;
					width: 60px;

					a {
						height: 100%;
						width: 100%;
						position: absolute;
						top: 0;
						left: 0;
					}
				}
			}
		}
	}

}

.site-footer {
	margin-top: 75px;
	text-align: center;

	.footer-top {
		background: url($cdnPath + "images/light-gray-bg.jpg") center top repeat-y;
		padding: 75px 0;

		.footer-event-logo {
			background-image: url($cdnPath + "images/BP2-logo-black.png");
			background-image: url($cdnPath + "images/BP2-logo-black.svg");
			background-repeat: no-repeat;
			background-position: center center;
			margin: 0 auto;
			margin-bottom: 75px;
			height: 152px;
			width: 350px;
		}

		ul.social-btns {
			font-size: 20px;
			list-style: none;
			line-height: 1;
			margin: 0;
			margin-bottom: 20px;
			padding: 0;

			li {
				display: inline-block;
				padding: 0px 10px;
				line-height: 1;
			}

			a:hover {
				text-decoration: none;
			}
		}

		ul.social-pieces {
			list-style: none;
			line-height: 1;
			margin: 0;
			padding: 0;

			li {
				display: inline-block;
				padding: 0px 10px;
				line-height: 1;
				border-left: 1px solid $black;

				&:first-child {
					border-left: none;
				}
			}
		}
	}

	.footer-bottom {
		background: url($cdnPath + "images/header-bottom.jpg") center top repeat-y;
		color: $white;
		padding: 50px 0;

		ul.footer-links {
			font-size: 12px;
			line-height: 1;
			list-style: none;
			margin: 0;
			padding: 0;

			li {
				display: inline-block;
				padding: 0 10px;
				line-height: 16px;
				border-left: 1px solid $white;

				&:first-child {
					border-left: none;
				}
			}
		}

		a {
			color: $white;
		}

		.container {
			position: relative;
		}

		.footer-logo {
			background-image: url($cdnPath + "images/hs-logo-white.png");
			background-image: url($cdnPath + "images/hs-logo-white.svg");
			background-repeat: no-repeat;
			background-position: center center;
			height: 40px;
			width: 35px;
			position: absolute;
			right: 0;
			top: 50%;
			margin-top: -20px;
		}
	}
}

section {
	//margin-bottom: 75px;
	padding-top: 75px;

	&.inner {
		margin-top: 75px;
	}
}

.section-heading {
	padding: 0 10px;
	h2 {
		margin-top: 0;
		line-height: 1;
	}

	&.inner {
		//margin-top: 75px;
	}
}

.section-body {
	margin-top: 60px;
	padding: 0px 10px;
}

section.event-info {
	text-align: center;
	//margin-bottom: 60px;
}

section.recap {
	background: url($cdnPath + "images/HS-owners.jpg?v=2") center bottom no-repeat;
	color: $white;
	height: 518px;
	//margin-bottom: 0px;
	//margin-top: 65px;

	.section-heading {
		margin-top: 90px;
		//margin-top: 75px;
	}
}

section.the-truck {
	background: image-url("truck-temp.jpg") center top no-repeat;
	height: 500px - 75;

	margin-top: 0px;
}

section.vip-pass {
	//padding-top: 85px; //Manually set for auto scrolling

	.section-heading {
		text-align: center;
	}

	.section-body {
		ul {
			list-style-image: url($cdnPath + "images/list-check.png?v-2");
			margin: 0px 80px;
			padding: 0;

			li {
				padding-bottom: 10px;
			}
		}
	}
}

section.event-schedule {
	background: url($cdnPath + "images/header-bottom.jpg") center top repeat-y;
	color: $white;
	padding-bottom: 75px;

	.section-body {
		padding: 0;
	}

	.schedule-head h4 {
		background-color: $white;
		color: $black;
		line-height: 1;
		margin: 0;
		padding: 7px 10px;
		text-transform: uppercase;
	}

	.schedule-body {
		background-color: #333;
		padding: 60px 10px 20px 10px;

		h3 {
			font-family: 'edward_mediumregular';
			margin: 0;
			line-height: 1;
		}
		h6 {
			margin: 0;
		}

		.schedule-desc {
			padding: 60px 0 30px 0;
			min-height: 160px;
		}

		.no-btn {
			color: #666;
			font-family: 'edward_mediumregular';
			line-height: 18px;
		}
	}
}

section.faq {
	.section-body {
		ul {
			//list-style-image: image-url("list-question.png");
			list-style-image: url($cdnPath + "images/list-question.png");
			margin: 0px 80px;
			padding: 0;

			li {
				color: $linkColor;
				cursor: pointer;
				padding-bottom: 10px;

				span {
					color: $textColor;
					//display: none;
				}
			}
		}
	}
}

// RETINA CALLS
@media (-webkit-min-device-pixel-ratio: 2),
(min-resolution: 192dpi) {
	.site-header .header-top {
		background: url($cdnPath + "images/hsHeader-x2.jpg") center top no-repeat;
		background-size: 1340px 444px;
	}

	section.recap {
		background: url($cdnPath + "images/HS-owners-x2.jpg") center top no-repeat;
		background-size: 1340px 518px;
	}
}

